tests/suite/snapshots/suite__parse__tests__parse__bad-array-arg.xi.snap
---
source: tests/suite/parse.rs
assertion_line: 36
expression: Snapshot(program)
---
Error: Syntactic error
   ╭─[tests/parse/bad-array-arg.xi:1:5]
   │
 1 │ foo(a: int[1]) {}
   ·     ────┬────  
   ·         ╰────── Unexpected length in array type
───╯

